files/haiqv/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haiqv-dashboard-backend
  namespace: kubeflow
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app: haiqv-dashboard-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: haiqv-dashboard-backend
    spec:
      containers:
        - env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.name
          image: maeryo/haiqv-dashboard-backend:2.0.1
          imagePullPolicy: IfNotPresent
          name: haiqv-dashboard-backend
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - mountPath: /logs
              name: app-log
            - mountPath: /etc/localtime
              name: timezone-config
            - mountPath: /root/.kube
              name: kubeconfig
      volumes:
        - hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
            type: ""
          name: timezone-config
        - name: app-log
          persistentVolumeClaim:
            claimName: haiqv-log
        - name: kubeconfig
          configMap:
            name: kubeconfig
