files/haiqv/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haiqv-dashboard-backend
  namespace: kubeflow
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8888
  selector:
    app: haiqv-dashboard-backend
  type: ClusterIP
